--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>formation</groupId>
-	<artifactId>formation</artifactId>
+	<groupId>lanmower</groupId>
+	<artifactId>lanmower</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>formation</name>
+	<name>lanmower</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
@@ -20,12 +20,6 @@
 			<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-compiler-plugin</artifactId>
 			<version>3.8.1</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot</artifactId>
-			<version>2.0.2.RELEASE</version>
 		</dependency>
 
 		<dependency>
